fix horizontal scroll

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 html,
 body {
-	width: 100vw;
+	max-width: 100vw;
 	min-height: 100vh;
 	margin: 0;
 	padding: 0;
@@ -11,7 +11,7 @@ body {
 }
 
 #root {
-	width: 100vw;
+	width: 100%;
 	height: 100%;
 	min-height: 100vh;
 }
